[metadata]
name = lbaas
summary = LBaaS Project
description-file = 
	README.md
license = Apache License, Version 2.0
classifiers = 
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	#License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
author = Mirantis Inc.
author-email = nmakhotkin@mirantis.com

[files]
packages = 
	lbaas

[entry_points]
console_scripts = 
	lbaas-server = lbaas.cmd.launch:main
	lbaas-db-manage = lbaas.db.sqlalchemy.migration.cli:main
oslo.config.opts = 
	lbaas.config = lbaas.config:list_opts
lbaas.drivers = 
	haproxy = lbaas.drivers.haproxy:HAProxyDriver

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

