[metadata]
name = f5_lbaas_driver
summary = LBaaS Project
description-file =
    README.md
license = Apache License, Version 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    #License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = Mirantis Inc.
author-email = nmakhotkin@mirantis.com

[files]
packages =
    f5_lbaas_driver

[entry_points]
lbaas.drivers =
    f5ltm = f5_lbaas_driver.f5ltm:F5Driver

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

